gitignore文件中增加个人标识

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# java开发通用模版
+# java开发通用模版 ---iVanz---20220824
 # 来自 https://blog.csdn.net/duguxueao/article/details/120334763
 
 # Compiled class file
